--- a/Python/Tutorial/Python Software Development/class_obj_exercise.ipynb
+++ b/Python/Tutorial/Python Software Development/class_obj_exercise.ipynb
@@ -360,11 +360,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2214e8dd62459074908a99404395d337061d4357bdd4e7c9f6f5f8f61b5651c8"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -378,9 +375,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f44a971b6fee70a18eb961a728c4c2bf164ef47e0339fc88364546047bf7704d"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
