--- a/Python/Tutorial/Python Software Development/Mock_Assessment/displayCrime.ipynb
+++ b/Python/Tutorial/Python Software Development/Mock_Assessment/displayCrime.ipynb
@@ -18,88 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 77 crimes in manchester: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get the city and crime code from the user\n",
-    "city = input(\"Enter the city: \")\n",
-    "crime_code = input(\"Enter the crime code: \")\n",
-    "\n",
-    "# Open the file and read the lines\n",
-    "with open('crimedata.txt', 'r') as f:\n",
-    "    lines = f.readlines()\n",
-    "\n",
-    "# Initialize a counter\n",
-    "count = 0\n",
-    "\n",
-    "# Iterate through the lines and update the count\n",
-    "for line in lines:\n",
-    "    if line.split()[1] == city and line.split()[2] == crime_code:\n",
-    "        count += 1\n",
-    "\n",
-    "# Print the count\n",
-    "print(f'Number of {crime_code} crimes in {city}: {count}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "take_vehcle in manchester: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def main():\n",
-    "    city = input(\"City: \")\n",
-    "    crime_code = input(\"Crime code: \")\n",
-    "    crime_data = read_crime_data()\n",
-    "    display_crime_data(crime_data, city, crime_code)\n",
-    "\n",
-    "def read_crime_data():\n",
-    "    crime_data = {}\n",
-    "    with open(\"crimedata.txt\") as f:\n",
-    "        for line in f:\n",
-    "            line = line.strip()\n",
-    "            crime_id, city, crime_type, crime_code = line.split(\"\\t\")\n",
-    "            crime_data[crime_id] = (city, crime_type, crime_code)\n",
-    "    return crime_data\n",
-    "\n",
-    "def display_crime_data(crime_data, city, crime_code):\n",
-    "    count = 0\n",
-    "    for crime_id in crime_data:\n",
-    "        if crime_data[crime_id][0] == city and crime_data[crime_id][2] == crime_code:\n",
-    "            count += 1\n",
-    "    print(\"{} in {}: {}\".format(crime_data[crime_id][1], city, count))\n",
-    "\n",
-    "main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "take_vehcle in newcastle: 2\n"
+      "harassment in manchester: 3\n"
      ]
     }
    ],
@@ -124,9 +50,10 @@
     "    for crime_id in crime_data:\n",
     "        if crime_data[crime_id][0] == city and crime_data[crime_id][2] == crime_code:\n",
     "            count += 1\n",
-    "    print(\"{} in {}: {}\".format(crime_data[crime_id][1], city, count))\n",
+    "            crime_type = crime_data[crime_id][1]\n",
+    "    print(\"{} in {}: {}\".format(crime_type, city, count))\n",
     "\n",
-    "main()"
+    "main()\n"
    ]
   },
   {
